Updated photographer's name and fixed header overlap in mobile and tablet view

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+<!-- © 2025 Aaron Elcheson. All Rights Reserved. -->
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -12,7 +15,7 @@
 <body>
 
   <header>
-    <button class="site-title">Abc Abcabcabca Fotografie</button>
+    <button class="site-title">Evi Wendlinger Fotografie</button>
     <nav>
       <a href="index.html">Home</a>
       <a href="portfolio_main.html">Portfolio</a>
@@ -41,7 +44,7 @@
       <h2>Portfolio Albums</h2>
       <p class="portfolio-sub">
         Space and Nature<br>
-        View the portfolio collection of Abc Abcabcabca
+        View the portfolio collection of Evi Wendlinger
       </p>
     </div>
   </section>
@@ -55,7 +58,7 @@
   </main>
 
   <footer>
-    Photos and content © Abc Abcabcabca...
+    Photos and content © Evi Wendlinger
   </footer>
 
 </body>
