--- a/portfolio_main.html
+++ b/portfolio_main.html
@@ -1,9 +1,11 @@
+<!-- © 2025 Aaron Elcheson. All Rights Reserved. -->
+
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Photography Portfolio</title>
+  <title> Evi Wendlinger's Photography Portfolio</title>
 
   <style>
     /* reset only the margin—fonts & colors come from style.css */
@@ -38,7 +40,7 @@
       font-weight: 200;
       text-transform: uppercase;
       letter-spacing: 0.15em;
-      font-size: 1.em;
+      font-size: 1em;
       margin-bottom: 0.5em;
     }
     .page-intro p {
@@ -153,7 +155,7 @@
 
 <body>
   <header>
-    <button class="site-title">Abc Abcabcabca Fotografie</button>
+    <button class="site-title">Evi Wendlinger Fotografie</button>
     <nav>
       <a href="index.html">Home</a>
       <a href="portfolio_main.html">Portfolio</a>
@@ -174,7 +176,7 @@
   <main>
     <section class="page-intro">
       <h1>Portfolio Albums</h1>
-      <p>View the collection of Abc Abcabcabca</p>
+      <p>View the collection of Evi Wendlinger</p>
     </section>
 
     <div class="flex-grid-thirds">
@@ -218,7 +220,7 @@
   </main>
 
   <footer style="padding:1em; text-align:center;">
-    Words
+    Photos and content © Evi Wendlinger
   </footer>
 </body>
 </html>
