font and positioning changes for tablet

--- a/portfolio_main.html
+++ b/portfolio_main.html
@@ -40,7 +40,7 @@
       font-weight: 200;
       text-transform: uppercase;
       letter-spacing: 0.15em;
-      font-size: 1.5em;
+      font-size: 1.75em;
       margin-bottom: 0.5em;
     }
     .page-intro p {
@@ -121,7 +121,7 @@
       font-family: 'Libertinus Math', system-ui;
       
       font-weight: 400;
-      font-size: 1.25em;
+      font-size: 1.2em;
       color: #000;
       line-height: 1.8;
       opacity: 0.8;
@@ -139,10 +139,12 @@
         flex: 1 1 100%;
       }
       .page-intro h1 {
-        font-size: 2rem;
+        font-size: 1.75em;
+        font-weight: 200;
+        /* margin: 5em auto 1em; */
       }
       .page-intro p {
-        font-size: 1rem;
+        font-size: 1em;
       }
     }
   </style>
