gallery pages with sample images and contact page added

--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
       text-align: center;
       background: #fbf1d8;
       margin-top: 0.3em;
-      /* font settings */
+      /* font settings -> match index template */
       font-family: 'Libertinus Math', system-ui;
       font-weight: 400;
       font-size: 1.2em;
@@ -173,45 +173,19 @@
   </header>
 
   <main>
-    <section class="page-intro">
-      <h1>Portfolio Albums</h1>
-      <p>View the collection of Evi Wendlinger</p>
+    <section class="hero">
+        
+        <section class="page-intro">
+        <h2>Contact Evi Wendlinger</h2>
+        <p>Contact Evi Wendlinger by email at: 
+            (note: this website is still in progress. Contact the developer in the meantimee at aaron.elcheson@mail.mcgill.ca)
+        </p>
+        </section>
+
     </section>
-
-    <div class="flex-grid-thirds">
-
-      <a href="astro_album.html" class="col" style="text-decoration: none;">
-        <div class="col">
-            <img src="gallery_one/sunset_ocean.jpg" alt="Astro Gallery album cover"> 
-          <div class="caption">ASTRO</div>
-        </div>
-      </a>
-
-      <a href="nature_album.html" class="col" style="text-decoration: none;">
-        <div class="col">
-          <img src="nature_gallery/water.jpg" alt="Nature Gallery cover">     
-          <div class="caption">NATURE</div>
-        </div>
-      </a>
-
-      <a href="landscape_album.html", class="col" style="text-decoration: none;">
-        <div class="col">  
-          <img src="landscape_gallery/pond.jpg" alt="Landscape Gallery album cover">
-          <div class="caption">LANDSCAPES</div>
-        </div>
-      </a>
-
-      <a href="flower_album.html" class="col" style="text-decoration: none;">
-        <div class="col"> 
-          <img src="flower_gallery/purple_flowers.jpg" alt="Flowers and Plants Gallery album cover"> 
-          <div class="caption">FLOWERS</div>
-        </div>
-      </a>
-    </div>
-  </main>
-
-  <footer style="padding:1em; text-align:center;">
-    Photos and content © Evi Wendlinger 2025
-  </footer>
-</body>
-</html>
+    </main>
+    <footer style="padding:1em; text-align:center;">
+            Photos and content © Evi Wendlinger 2025
+    </footer>
+    </body>
+    </html>
