--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!-- © 2025 Aaron Elcheson. All Rights Reserved. -->
+<!-- © 2025 Aaron Elcheson. All Rights Reserved. aaron.elcheson@mail.mcgill.ca -->
 
 <!doctype html>
 <html lang="en">
@@ -20,7 +20,7 @@
       <a href="index.html">Home</a>
       <a href="portfolio_main.html">Portfolio</a>
       <a href="#">Donate</a>
-      <a href="#">Contact</a>
+      <a href="contact.html">Contact</a>
     </nav>
     <details class="toggle-details">
       <summary>&#9776;</summary>
@@ -28,7 +28,7 @@
         <a href="index.html">Home</a>
         <a href="portfolio_main.html">Portfolio</a>
         <a href="#">Donate</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </details>
   </header>
@@ -49,16 +49,24 @@
     </div>
   </section>
 
-    <section class="teasers">
-      <img src="test_raws_burghausen_2025/darktable_exported/P1086674.webp" alt="Teaser 1">
-      <img src="test_raws_burghausen_2025/darktable_exported/P1086675.webp" alt="Teaser 2">
-      <img src="test_raws_burghausen_2025/darktable_exported/P1086678_01.webp" alt="Teaser 3">
-      <img src="test_raws_burghausen_2025/darktable_exported/P1086674.webp" alt="Teaser 4">
+    <section class="teasers" style="display: block; flex-direction: row; flex-wrap: wrap;">
+
+      <a href="astro_album.html" style="text-decoration: none;">      
+      <img src="gallery_one/clear_ocean.jpg" alt="Teaser 1"></a>
+
+      <a href="nature_album.html" style="text-decoration: none;">
+      <img src="nature_gallery/beach.jpg" alt="Teaser 2"></a>
+
+      <a href="landscape_album.html" style="text-decoration: none;">
+      <img src="landscape_gallery/fjord.jpg" alt="Teaser 3"></a>
+
+      <a href="flower_album.html" style="text-decoration: none;">
+      <img src="flower_gallery/gardens.jpg" alt="Teaser 4"></a>
     </section>
   </main>
 
   <footer>
-    Photos and content © Evi Wendlinger
+    Photos and content © Evi Wendlinger 2025
   </footer>
 
 </body>
